<resources>
    <string name="app_name">Дневник Диабетика</string>
    <string name="calories_per_period">Калории за период: %s</string>
    <string name="product">Продукт: %s</string>
    <string name="total_meal">Ккал %1$s | Б %2$s | Ж %3$s | У %4$s</string>
    <string name="date">Дата: %s</string>
    <string name="date_simple">Дата</string>
    <string name="time">Время: %s</string>
    <string name="sugar">Сахар: %s</string>
    <string name="sugar_simple">Сахар:</string>
    <string name="date_filter">Фильтр по дате</string>
    <string name="food_taking">Добавить прием пищи</string>
    <string name="patients_profile">Профили пациентов</string>
    <string name="add_profile">Добавить профиль</string>
    <string name="export_import">Перенос данных</string>
    <string name="add_measurement">Добавить измерение</string>
    <string name="search_product">Поиск продукта</string>
    <string name="add_product">Добавить продукт</string>
    <string name="add_reminder">Добавить напоминание</string>
    <string name="average_sugar">Средний сахар:</string>
    <string name="min">Минимум:</string>
    <string name="max">Максимум:</string>
    <string name="number_of_measurements">Количество измерений:</string>
    <string name="nutrition">Питание</string>
    <string name="average_value">Средние значения</string>
    <string name="calories">Калории</string>
    <string name="protein">Белки</string>
    <string name="fats">Жиры</string>
    <string name="carbs">Углеводы</string>
    <string name="grams">Граммы</string>
    <string name="comment">Комментарий</string>
    <string name="sugar_input">Сахар (ммоль/л)</string>
    <string name="insulin_input">Инсулин (ЕД)</string>
    <string name="bread_units_input">Хлебные единицы</string>
    <string name="product_name">Название продукта :</string>
    <string name="protein_on_100_grams">Белки на 100 г :</string>
    <string name="fats_on_100_grams">Жиры на 100 г :</string>
    <string name="carbs_on_100_grams">Углеводы на 100 г :</string>
    <string name="calories_optional">Калории (опционально)</string>
    <string name="reminder_name">Название напоминания</string>
    <string name="choose_date">Выбрать дату</string>
    <string name="choose_time">Выбрать время</string>
    <string name="repeat_daily">Повторять ежедневно</string>
    <string name="enabled">Включено</string>
    <string name="total">Итого</string>
</resources>