<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="product"
            android:hint="@string/product_name"
            android:inputType="textNoSuggestions" />

        <EditText
            android:id="@+id/proteinInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="number"
            android:hint="@string/protein_on_100_grams"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/fatInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="number"
            android:hint="@string/fats_on_100_grams"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/carbsInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="number"
            android:hint="@string/carbs_on_100_grams"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/caloriesInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="number"
            android:hint="@string/calories_optional"
            android:inputType="numberDecimal" />

    </LinearLayout>
</ScrollView>