<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/glucoseInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="number"
            android:hint="@string/sugar_input"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/insulinInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="number"
            android:hint="@string/insulin_input"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/breadUnitsInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="number"
            android:hint="@string/bread_units_input"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/commentInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="number"
            android:hint="@string/comment"
            android:inputType="textMultiLine" />

    </LinearLayout>
</ScrollView>